# wagtail-taggable

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  MANIFEST.in  README.md  models.py  pyproject.toml  setup.cfg
templates/tags/: tag_chooser.html
wagtail_taggable/: admin.py  apps.py  decorators.py  models.py
wagtail_taggable/static/wagtail_taggable/css/: tag-panel.css
wagtail_taggable/templates/tags/: tags_panel.html
wagtail_taggable/templates/wagtail_taggable/: tag_chooser.html  tag_wrapper.html  tags_panel.html
