[metadata]
name = wagtail_taggable
version = 0.0.6
description = Simple tagging for the Wagtail CMS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/octavenz/wagtail-taggable
author = Claudia Field, Richard Campen
author_email = claudia.field@octave.nz, richard@campen.co
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Framework :: Wagtail :: 3
    Framework :: Wagtail :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
py_modules = wagtail_taggable
install_requires =
    wagtail>=2.16
    wagtail-generic-chooser>=0.4
python_requires = >=3.7

[bdist_wheel]
universal = True
