[metadata]
name = wagtail_taggable
version = 0.0.9
description = Simple tagging for the Wagtail CMS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/octavenz/wagtail-taggable
author = Claudia Field
author_email = claudia.field@octave.nz
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 3
    Framework :: Wagtail :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
packages = find:
install_requires =
    wagtail>=3.0
    wagtail-generic-chooser>=0.4
python_requires = >=3.7
include_package_data = true

[bdist_wheel]
universal = True
